[update] Comment uwsgi_virtualenv_python and uwsgi_virtualenv

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,10 +4,10 @@
 uwsgi_executable: "pip3.4"
 
 # The Python executable used for creating the virtual environment. For example python3.4, python2.7.
-uwsgi_virtualenv_python: null
+#uwsgi_virtualenv_python: null
 
 # An optional path to a virtualenv directory to install into. It cannot be specified together with the 'executable' parameter.
-uwsgi_virtualenv: null
+#uwsgi_virtualenv: null
 
 # uWSGI source path
 uwsgi_source: "/usr/local/bin/uwsgi"
