--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -5,3 +5,9 @@
     module: service
     name: "{{ uwsgi_service_name }}"
     state: restarted
+
+- name: "start uWSGI service"
+  action:
+    module: service
+    name: "{{ uwsgi_service_name }}"
+    state: started
