--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,9 +3,9 @@
 - include: install.yml
   tags: [uwsgi, uwsgi.install]
 
+- include: vassals.yml
+  when: uwsgi_emperor_mode
+  tags: [uwsgi, uwsgi.vassals]
+
 - include: configs.yml
   tags: [uwsgi, uwsgi.configs]
-
-- include: vassals.yml
-  when: uwsgi_emperor_mode and uwsgi_vassals
-  tags: [uwsgi, uwsgi.vassals]
