[update] Handlers depends on uwsgi_upstart_enabled

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,12 +1,14 @@
 ---
 
 - name: "restart uWSGI service"
+  when: " {{ uwsgi_upstart_enabled }}"
   action:
     module: service
     name: "{{ uwsgi_service_name }}"
     state: restarted
 
 - name: "start uWSGI service"
+  when: " {{ uwsgi_upstart_enabled }}"
   action:
     module: service
     name: "{{ uwsgi_service_name }}"
