--- a/tasks/configs.yml
+++ b/tasks/configs.yml
@@ -24,7 +24,7 @@
   notify: restart uWSGI service
 
 - name: Create the uWSGI upstart script
-  when: "{{ uwsgi_upstart_enabled }}"
+  when: "uwsgi_upstart_enabled"
   action:
     module: template
     src: "upstart.uwsgi.conf.j2"
